services/digit-recognition/model-serving/kubernetes/digit-recognition.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: digit-recognition-stateful
  labels:
    app: digit-recognition
spec:
  serviceName: digit-recognition
  replicas: 1
  selector:
    matchLabels:
      app: digit-recognition
  template:
    metadata:
      labels:
        app: digit-recognition
    spec:
      containers:
      - name: digit-recognition
        image: ghcr.io/swiss-ai-center/core-engine-digit-recognition:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
