services/digit-recognition/model-serving/kubernetes/digit-recognition.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digit-recognition-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: digit-recognition-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digit-recognition-service
            port:
              number: 80
  tls:
    - hosts:
        - digit-recognition-csia-pme.kube.isc.heia-fr.ch
